--- a/.github/workflows/newifi-d2.yml
+++ b/.github/workflows/newifi-d2.yml
@@ -79,30 +79,38 @@ jobs:
     #  run: |
     #    git clone https://github.com/xiaorouji/openwrt-passwall.git package/lienol
     #    git clone "your_github_link" package/"your_folder_name"      
-
-    - name: Configuration Customization - Build_x86
-      env:
-        CONFIG_FILE: 'newifi-d2.config'
+- name: Load custom configuration
       run: |
-        [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
-        chmod +x ./customize.sh && ./customize.sh
-        cd openwrt && make defconfig
-        
+        #=================================================
+        #+++++++++++++++++++++++++++++++++++++++++++++++++
+        cp -f newifi3.config ./lede/.config
+        chmod +x diy-newifi3.sh
+        cd lede
+        ../diy-newifi3.sh
+        #++++++++++++++++++++++++++++++++++++++++++++++++
+        #=================================================
+        make defconfig
     - name: Download package
-      working-directory: ./openwrt
-      run: |
-        make download -j$(nproc)
-        find dl -size -1024c -exec ls -l {} \;
-        find dl -size -1024c -exec rm -f {} \;
-
-    - name: Build firmware
-      working-directory: ./openwrt
       run: |
         echo -e "$(nproc) thread build."
+        cd lede && make download -j$(nproc)
+        find dl -size -1024c -exec ls -l {} \;
+        find dl -size -1024c -exec rm -f {} \;
+    - name: Build
+      run: |
+        cd lede
+        echo -e "$(nproc) thread build."
         make -j$(nproc) V=s
-
+ 
+ ######把上面生成的.config文件拷贝到bin/targets/ramips/mt7621/my.config，从而在下载固件时，一起下载回来。
+    - name: Copy .config  to  ./bin/targets/ramips/mt7621/my.config
+      run: |
+        cd lede
+        cp  .config   ./bin/targets/ramips/mt7621/my.config  
     - name : Upload artifact
       uses: actions/upload-artifact@master
       with:
-        name: OpenWrt
-        path: openwrt/bin
+        #=================================================
+        name: newifi3d2-20200710
+        path: ./lede/bin
+    
