--- a/.github/workflows/newifi-d2.yml
+++ b/.github/workflows/newifi-d2.yml
@@ -64,8 +64,8 @@ jobs:
         git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
         cd openwrt
         sed -i 's/#src-git helloworld/src-git helloworld/g' ./feeds.conf.default
-        git clone https://github.com/zzq12345/luci-app-koolproxy.git
-        git clone https://github.com/zzq12345/OpenWrt-Packages-DVB.git
+        git clone https://github.com/zzq12345/luci-app-koolproxy.git package/lienol
+        git clone https://github.com/zzq12345/OpenWrt-Packages-DVB.git package/lienol
     - name: Update & Install feeds
       working-directory: ./openwrt
       run: |
@@ -73,7 +73,6 @@ jobs:
         ./scripts/feeds update -a
         ./scripts/feeds install -a
         rm -rf ./feeds/packages/multimedia/tvheadend
-
     #- name: Import external feeds
     #  working-directory: ./openwrt
     #  run: |
