--- a/.github/workflows/newifi-d2.yml
+++ b/.github/workflows/newifi-d2.yml
@@ -80,8 +80,9 @@ jobs:
         git clone https://github.com/zzq12345/OpenWrt-Packages-DVB.git package/OpenWrt-Packages-DVB.git
         rm -r ./feeds/packages/multimedia/tvheadend
         git clone https://github.com/zzq12345/carddriver.git package/carddriver
-        cd carddrive 
+        cd package/carddrive 
         mv dvb.mk package/kernel/liunx/modules/
+        cd ..
         mkdir dvb-firmware
         mv dvb-firmware package/dvb-firmware
     - name: Configuration Customization - newifi-d2
