--- a/.github/workflows/newifi-d2.yml
+++ b/.github/workflows/newifi-d2.yml
@@ -81,7 +81,7 @@ jobs:
         rm -r ./feeds/packages/multimedia/tvheadend
         git clone https://github.com/zzq12345/carddriver.git package/carddriver
         cd package/carddriver
-        mv dvb.mk package/kernel/liunx/modules/
+        mv dvb.mk ./package/kernel/liunx/modules/
         cd ..
         mkdir dvb-firmware
         mv dvb-firmware package/dvb-firmware
