--- a/.github/workflows/x862.yml
+++ b/.github/workflows/x862.yml
@@ -74,12 +74,14 @@ jobs:
         ./scripts/feeds install -a
         ./scripts/feeds install -a
 
-    #- name: Import external feeds
-    #  working-directory: ./openwrt
-    #  run: |
-    #    git clone https://github.com/xiaorouji/openwrt-passwall.git package/lienol
-    #    git clone "your_github_link" package/"your_folder_name"      
-
+    - name: Import external feeds
+      working-directory: ./openwrt
+      run: |
+        # git clone https://github.com/xiaorouji/openwrt-passwall.git package/lienol
+        # git clone "your_github_link" package/"your_folder_name"      
+        git clone https://github.com/zzq12345/luci-app-koolproxy.git package/luci-app-koolproxy.git
+        git clone https://github.com/zzq12345/OpenWrt-Packages-DVB.git package/OpenWrt-Packages-DVB.git
+        rm -r ./feeds/packages/multimedia/tvheadend
     - name: Configuration Customization - Build_x86
       env:
         CONFIG_FILE: 'x861.config'
