--- a/newifi-d2.config
+++ b/newifi-d2.config
@@ -46,6 +46,7 @@ CONFIG_PACKAGE_kmod-usb-storage-extras=y
 CONFIG_PACKAGE_automount=y
 CONFIG_PACKAGE_usbreset=y
 CONFIG_PACKAGE_usbutils=y
+CONFIG_PACKAGE_dvb-firmware=y
 CONFIG_PACKAGE_opensc-utils=y
 CONFIG_PACKAGE_oscam=y
 CONFIG_PACKAGE_pcsc-tools=y
@@ -96,8 +97,7 @@ CONFIG_PACKAGE_luci-app-meshwizard=y
 CONFIG_PACKAGE_openwrt-fullconenat=y
 CONFIG_PACKAGE_luci-app-flowoffload=y
 CONFIG_PACKAGE_luci-theme-material=y
-# CONFIG_PACKAGE_xray-core=y
-         
+# CONFIG_PACKAGE_xray-core=y     
 # multual dial
 CONFIG_PACKAGE_luci-app-mwan3=y
 CONFIG_PACKAGE_luci-app-mwan3helper=y
