--- a/newifi-d2.config
+++ b/newifi-d2.config
@@ -4,6 +4,7 @@ CONFIG_TARGET_ramips_mt7621=y
 CONFIG_TARGET_ramips_mt7621_DEVICE_d-team_newifi-d2=y
 # Gzip
 CONFIG_TARGET_IMAGES_GZIP=y
+
 # IPv6
 CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
 CONFIG_PACKAGE_ipv6helper=y
@@ -96,12 +97,33 @@ CONFIG_PACKAGE_openwrt-fullconenat=y
 CONFIG_PACKAGE_luci-app-flowoffload=y
 CONFIG_PACKAGE_luci-theme-material=y
 # CONFIG_PACKAGE_xray-core=y
-         
+# CONFIG_PACKAGE_luci-i18n-advanced-reboot-zh-cn=y
+# CONFIG_PACKAGE_luci-i18n-amule-zh-cn=y
+# CONFIG_PACKAGE_luci-i18n-aria2-zh-cn=y
+# CONFIG_PACKAGE_luci-i18n-diag-core-zh-cn=y
+# CONFIG_PACKAGE_luci-i18n-dnsforwarder-zh-cn=y
+# CONFIG_PACKAGE_luci-i18n-hd-idle-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-kodexplorer-zh-cn=y
+# CONFIG_PACKAGE_luci-i18n-openvpn-server-zh-cn=y
+# CONFIG_PACKAGE_luci-i18n-openvpn-zh-cn=y
+# CONFIG_PACKAGE_luci-i18n-samba4-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-sfe-zh-cn=y
+# CONFIG_PACKAGE_luci-i18n-softethervpn-zh-cn=y
+# CONFIG_PACKAGE_luci-i18n-splash-zh-cn=y
+# CONFIG_PACKAGE_luci-i18n-sqm-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-uhttpd-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-usb-printer-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-v2ray-server-zh-cn=y
+#CONFIG_PACKAGE_luci-i18n-wireguard-zh-cn=y  
+   
 # multual dial
 CONFIG_PACKAGE_luci-app-mwan3=y
 CONFIG_PACKAGE_luci-app-mwan3helper=y
 CONFIG_PACKAGE_luci-app-syncdial=y
-          
+CONFIG_PACKAGE_luci-i18n-mwan3-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-mwan3helper-zh-cn=y  
+       
 # Open source WIFI driver
 CONFIG_PACKAGE_kmod-mt7603=y
 CONFIG_PACKAGE_kmod-mt7603e=n
