--- a/.github/workflows/newifi-d2.yml
+++ b/.github/workflows/newifi-d2.yml
@@ -90,7 +90,7 @@ jobs:
         CONFIG_FILE: 'newifi-d2.config'
       run: |
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
-        # chmod +x ./diy-newifi3.sh && ./diy-newifi3.sh
+        chmod +x ./diy-newifi3.sh && ./diy-newifi3.sh
         cd openwrt && make defconfig
     
     - name: Download package
