--- a/.github/workflows/newifi-d2.yml
+++ b/.github/workflows/newifi-d2.yml
@@ -70,29 +70,21 @@ jobs:
       run: |
         ./scripts/feeds update -a
         ./scripts/feeds install -a
-        
     - name: Import external feeds
       working-directory: ./openwrt
       run: |
-        # git clone "your_github_link" package/"your_folder_name"
+        # git clone https://github.com/xiaorouji/openwrt-passwall.git package/lienol
+        # git clone "your_github_link" package/"your_folder_name"      
         git clone https://github.com/zzq12345/luci-app-koolproxy.git package/luci-app-koolproxy.git
         git clone https://github.com/zzq12345/OpenWrt-Packages-DVB.git package/OpenWrt-Packages-DVB.git
         rm -r ./feeds/packages/multimedia/tvheadend
-        # git clone https://github.com/zzq12345/carddriver.git package/carddriver
-        # cd ./package/carddriver
-        # mv dvb.mk ./package/kernel/liunx/modules/
-        # cd ..
-        # mkdir dvb-firmware
-        # mv dvb-firmware package/dvb-firmware
-    - name: Configuration Customization - newifi-d2
-      working-directory: 
+    - name: Configuration Customization - Build_x86
       env:
         CONFIG_FILE: 'newifi-d2.config'
       run: |
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
-        chmod +x ./diy-newifi3.sh && ./diy-newifi3.sh
-        cd openwrt && make defconfig
-    
+        chmod +x ./customize.sh && ./customize.sh
+        cd openwrt && make defconfig   
     - name: Download package
       working-directory: ./openwrt
       run: |
