--- a/.github/workflows/newifi-d2.yml
+++ b/.github/workflows/newifi-d2.yml
@@ -83,7 +83,7 @@ jobs:
         CONFIG_FILE: 'newifi-d2.config'
       run: |
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
-        chmod +x ./customize.sh && ./customize.sh
+        # chmod +x ./customize.sh && ./customize.sh
         cd openwrt && make defconfig   
     - name: Download package
       working-directory: ./openwrt
