--- a/.github/workflows/x862.yml
+++ b/.github/workflows/x862.yml
@@ -87,7 +87,7 @@ jobs:
         CONFIG_FILE: 'x861.config'
       run: |
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
-        chmod +x ./customize.sh && ./customize.sh
+        # chmod +x ./customize.sh && ./customize.sh
         cd openwrt && make defconfig
         
     - name: Download package
