--- a/.github/workflows/x862.yml
+++ b/.github/workflows/x862.yml
@@ -86,9 +86,12 @@ jobs:
       env:
         CONFIG_FILE: 'x861.config'
       run: |
-        [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
-        # chmod +x ./customize.sh && ./customize.sh
-        cd openwrt && make defconfig
+        chmod +x diy-newifi3.sh
+        cd lede
+        ../diy-newifi3.sh
+        #++++++++++++++++++++++++++++++++++++++++++++++++
+        #=================================================
+        make defconfig
         
     - name: Download package
       working-directory: ./openwrt
