--- a/.github/workflows/newifi-d2.yml
+++ b/.github/workflows/newifi-d2.yml
@@ -83,8 +83,13 @@ jobs:
         CONFIG_FILE: 'newifi-d2.config'
       run: |
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
-        # chmod +x ./customize.sh && ./customize.sh
-        cd openwrt && make defconfig   
+        chmod +x diy-newifi3.sh
+        cd lede
+        ../diy-newifi3.sh
+        #++++++++++++++++++++++++++++++++++++++++++++++++
+        #=================================================
+        make defconfig
+       
     - name: Download package
       working-directory: ./openwrt
       run: |
