--- a/.github/workflows/newifi-d2.yml
+++ b/.github/workflows/newifi-d2.yml
@@ -79,7 +79,8 @@ jobs:
         git clone https://github.com/zzq12345/OpenWrt-Packages-DVB.git package/OpenWrt-Packages-DVB
         rm -r ./feeds/packages/multimedia/tvheadend
     - name: Configuration Customization - Build_x86
-      env:
+        # working-directory: ./openwrt
+        env:
         CONFIG_FILE: 'newifi-d2.config'
       run: |
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
