--- a/.github/workflows/newifi-d2.yml
+++ b/.github/workflows/newifi-d2.yml
@@ -86,12 +86,11 @@ jobs:
         # mkdir dvb-firmware
         # mv dvb-firmware package/dvb-firmware
     - name: Configuration Customization - newifi-d2
-      working-directory: 
       env:
         CONFIG_FILE: 'newifi-d2.config'
       run: |
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
-        # chmod +x ./diy-newifi3.sh && ./diy-newifi3.sh
+         chmod +x ./diy-newifi3.sh && ./diy-newifi3.sh
         cd openwrt && make defconfig
     
     - name: Download package
@@ -117,4 +116,3 @@ jobs:
       with:
         name: newifi3d2-20200710
         path: ./openwrt/bin
-    
