--- a/.github/workflows/newifi-d2.yml
+++ b/.github/workflows/newifi-d2.yml
@@ -65,34 +65,30 @@ jobs:
         cd openwrt
         sed -i 's/#src-git helloworld/src-git helloworld/g' ./feeds.conf.default
         
-    - name: Update & Install feeds
+     - name: Update & Install feeds
       working-directory: ./openwrt
       run: |
         ./scripts/feeds update -a
         ./scripts/feeds install -a
-        
+        ./scripts/feeds install -a
     - name: Import external feeds
       working-directory: ./openwrt
       run: |
         # git clone https://github.com/xiaorouji/openwrt-passwall.git package/lienol
-        # git clone "your_github_link" package/"your_folder_name"
-        git clone https://github.com/zzq12345/luci-app-koolproxy.git package/luci-app-koolproxy.git
-        git clone https://github.com/zzq12345/OpenWrt-Packages-DVB.git package/OpenWrt-Packages-DVB.git
+        # git clone "your_github_link" package/"your_folder_name"      
+        git clone https://github.com/zzq12345/luci-app-koolproxy.git package/luci-app-koolproxy
+        git clone https://github.com/zzq12345/OpenWrt-Packages-DVB.git package/OpenWrt-Packages-DVB
         rm -r ./feeds/packages/multimedia/tvheadend
-        # git clone https://github.com/zzq12345/carddriver.git package/carddriver
-        # cd ./package/carddriver
-        # mv dvb.mk ./package/kernel/liunx/modules/
-        # cd ..
-        # mkdir dvb-firmware
-        # mv dvb-firmware package/dvb-firmware
-    - name: Configuration Customization - newifi-d2
+    - name: Configuration Customization - Build_newifi-d2
       env:
         CONFIG_FILE: 'newifi-d2.config'
       run: |
-        [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
-        # chmod +x ./diy-newifi3.sh && ./diy-newifi3.sh
-        cd openwrt && make defconfig
-    
+        chmod +x diy-newifi3.sh
+        cd openwrt
+        ../diy-newifi3.sh
+        #++++++++++++++++++++++++++++++++++++++++++++++++
+        #=================================================
+        make defconfig
     - name: Download package
       working-directory: ./openwrt
       run: |
