--- a/jcg-q20.config
+++ b/jcg-q20.config
@@ -1,7 +1,7 @@
 # Device type
 CONFIG_TARGET_ramips=y
 CONFIG_TARGET_ramips_mt7621=y
-CONFIG_TARGET_ramips_mt7621_DEVICE_d-jcg q20=y
+CONFIG_TARGET_ramips_mt7621_DEVICE_jcg q20=y
 # Gzip
 CONFIG_TARGET_IMAGES_GZIP=y
 
@@ -128,8 +128,8 @@ CONFIG_PACKAGE_luci-i18n-mwan3helper-zh-cn=y
 CONFIG_PACKAGE_kmod-mt7975an=y
 CONFIG_PACKAGE_kmod-mt7911an=y
 CONFIG_PACKAGE_kmod-mt7915a=y
-CONFIG_PACKAGE_kmod-mt76x2=y
-CONFIG_PACKAGE_kmod-mt76x2e=n
+# CONFIG_PACKAGE_kmod-mt76x2=y
+# CONFIG_PACKAGE_kmod-mt76x2e=n
 CONFIG_PACKAGE_hostapd-common=y
 CONFIG_PACKAGE_wpad-openssl=y
 CONFIG_PACKAGE_luci-app-mtwifi=n
