--- a/jcg-q20.config
+++ b/jcg-q20.config
@@ -119,8 +119,10 @@ CONFIG_PACKAGE_luci-i18n-mwan3-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-mwan3helper-zh-cn=y    
 # Open source WIFI driver
 CONFIG_PACKAGE_kmod-mt7975an=y
+CONFIG_PACKAGE_kmod-mt7975dn=y
 CONFIG_PACKAGE_kmod-mt7911an=y
 CONFIG_PACKAGE_kmod-mt7915a=y
+CONFIG_PACKAGE_kmod-mt7905dna=y
 # CONFIG_PACKAGE_kmod-mt76x2=y
 # CONFIG_PACKAGE_kmod-mt76x2e=n
 CONFIG_PACKAGE_hostapd-common=y
