--- a/.github/workflows/jcg-q20.yml
+++ b/.github/workflows/jcg-q20.yml
@@ -77,16 +77,14 @@ jobs:
         git clone https://github.com/zzq12345/luci-app-koolproxy.git package/luci-app-koolproxy
         git clone https://github.com/zzq12345/OpenWrt-Packages-DVB.git package/OpenWrt-Packages-DVB
         rm -rf ./feeds/packages/multimedia/tvheadend
-    - name: Configuration Customization - Build_newifi-d2
+    - name: Configuration Customization - jcg-q20
+       working-directory:
       env:
         CONFIG_FILE: 'jcg-q20.config'
       run: |
-        chmod +x diy-newifi3.sh
-        cd openwrt
-        ../diy-newifi3.sh
-        #++++++++++++++++++++++++++++++++++++++++++++++++
-        #=================================================
-        make defconfig
+        [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
+        chmod +x ./diy-newifi3.sh && ./diy-newifi3.sh
+        cd openwrt && make defconfig    
     - name: Download package
       working-directory: ./openwrt
       run: |
@@ -95,13 +93,9 @@ jobs:
         find dl -size -1024c -exec rm -f {} \;
     - name: Build
       working-directory: ./openwrt
-      run: |
-        
+      run: |        
         echo -e "$(nproc) thread build."
-        make -j$(nproc) V=s
- 
-    - name : Upload artifact
-      uses: actions/upload-artifact@master
-      with:
-        name: jcg_q20-20210617
-        path: ./openwrt/bin
+        make -j$(nproc) V=s 
+ ######把上面生成的.config文件拷贝到bin/targets/ramips/mt7621/my.config，从而在下载固件时，一起下载回来。
+    - name: Copy .config  to  ./bin/targets/ramips/mt7621/my.config
+      working-directory: ./openwrt
