--- a/.github/workflows/jcg-q20.yml
+++ b/.github/workflows/jcg-q20.yml
@@ -75,6 +75,7 @@ jobs:
     - name: Configuration Customization - jcg-q20 
       env:
         CONFIG_FILE: 'jcg-q20.config'
+      working-directory: ./
       run: |
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
         chmod +x ./diy-newifi3.sh && ./diy-newifi3.sh
