--- a/.github/workflows/jcg-q20.yml
+++ b/.github/workflows/jcg-q20.yml
@@ -71,7 +71,7 @@ jobs:
         # git clone "your_github_link" package/"your_folder_name"      
         git clone https://github.com/zzq12345/luci-app-koolproxy.git package/luci-app-koolproxy
         git clone https://github.com/zzq12345/OpenWrt-Packages-DVB.git package/OpenWrt-Packages-DVB
-        rm -rf ./feeds/packages/multimedia/tvheadend
+        rm -rf /feeds/packages/multimedia/tvheadend
     - name: Configuration Customization - jcg-q20 
       env:
         CONFIG_FILE: 'jcg-q20.config'
